--- a/mcarbonPortal/src/app/form-dialog/form-dialog.component.html
+++ b/mcarbonPortal/src/app/form-dialog/form-dialog.component.html
@@ -121,7 +121,7 @@
           <section class="example-section">
             <mat-checkbox
               *ngFor="let access of accessData"
-              [value]="access.access_id"
+              [value]="access.accessId"
               class="col-md-3 offset-md-1"
               (change)="addAccessId(access, $event.checked)"
             >
@@ -185,12 +185,12 @@
             <div *ngFor="let feature of featuresData" class="row">
               <div class="col-md-4 offset-md-1">
                 <mat-checkbox
-                  [value]="feature.feature_id"
+                  [value]="feature.featureId"
                   (change)="
                     showMetaList(feature, $event.checked);
                     updateSelectedFeaturesMeta(
-                      feature.feature_id,
-                      feature.meta_list
+                      feature.featureId,
+                      feature.metaList
                     )
                   "
                 >
@@ -208,7 +208,7 @@
                       value="{{ meta.value }}"
                       placeholder="{{ meta.key }}"
                       #metaValue
-                      (change)="setMetaValue(feature.feature_id,meta.key,metaValue.value)"
+                      (change)="setMetaValue(feature.featureId,meta.key,metaValue.value)"
                     />
                   </mat-form-field>
                 </div>
