--- a/mcarbonPortal/src/app/components/navbar/navbar.component.html
+++ b/mcarbonPortal/src/app/components/navbar/navbar.component.html
@@ -72,11 +72,12 @@
             <p>
               <span class="d-lg-none d-md-block">Account</span>
             </p> </a
-          ><mat-menu #menu="matMenu" xPosition="before">
+          >
+          <mat-menu #menu="matMenu" xPosition="before">
             <button class="btn-action" mat-menu-item (click)="goTo('app/user-profile')">
               <span>Profile</span>
             </button>
-            <button class="btn-action" mat-menu-item (click)="goTo('login')">
+            <button class="btn-action" mat-menu-item (click)="logout()">
               <span>Log Out</span>
             </button>
           </mat-menu>
