--- a/axisbankSupport/src/app/mycomp/info/info.component.html
+++ b/axisbankSupport/src/app/mycomp/info/info.component.html
@@ -12,10 +12,12 @@
   </div>
 
   <div class="container">
-    <form >
+    <form (submit)="onsubmit()">
       <div class="form-group">
         <label for="username">Username or Customer ID:</label>
-        <input type="text" id="username" name="username" />
+        <input type="text" [(ngModel)]="username" name="username" placeholder="Username">
+
+        <!-- <input type="text" id="username" name="username" /> -->
       </div>
       <div class="form-group">
         <label for="password">Password:</label>
@@ -23,7 +25,7 @@
         <a href="#" class="forgot-password">Forgot Password?</a>
       </div>
       <div class="form-group">
-        <button type="submit" class="login-btn" (click)="onsubmit()">Login</button>
+        <button type="submit" class="login-btn" >Login</button>
       </div>
     </form>
     <div class="footer">
