added user profile

--- a/mcarbonPortal/src/app/user-profile/user-profile.component.scss
+++ b/mcarbonPortal/src/app/user-profile/user-profile.component.scss
@@ -2,7 +2,19 @@
   margin-top: 60px !important;
 }
 
-
-.card-profile, .card-avatar{
+.card-profile,
+.card-avatar {
   margin: 0px auto 0;
+}
+
+// .row-1 {
+//   margin-top: 40px;
+// }
+
+.card-custom {
+  font-size: 1rem;
+}
+
+.heading {
+  font-weight: bold;
 }
