--- a/mcarbonPortal/src/app/user-profile/user-profile.component.scss
+++ b/mcarbonPortal/src/app/user-profile/user-profile.component.scss
@@ -7,14 +7,18 @@
   margin: 0px auto 0;
 }
 
-// .row-1 {
-//   margin-top: 40px;
-// }
-
 .card-custom {
   font-size: 1rem;
 }
 
 .heading {
   font-weight: bold;
+}
+
+.profile {
+  margin-top: 30px;
+}
+
+.card-1 {
+  min-height: 345px !important;
 }
