--- a/VideoConferencing-Customer-Support-Supervisor/src/app/dashboard/dashboard.component.html
+++ b/VideoConferencing-Customer-Support-Supervisor/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 <div class="card-container">
 	<h1>Video Conference App</h1>
-	<input class="input" #box placeholder="Enter Your Name" type="text" (keyup.enter)="EnterName(box.value)" >
+	<input class="input" #box placeholder="Enter Your Name" type="text" [(ngModel)]="name" >
 	<button id="call-app-btn" class="card" (click)="goTo('call')">
 		<span style="font-size: large; font-weight: bold;">Consult on Video</span>
 	</button>
