Call Component html changes

--- a/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
+++ b/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
@@ -16,7 +16,7 @@
 	[toolbarRecordingButton]="recordingEnabled"
 	[toolbarBroadcastingButton]="broadcastingEnabled"
 	[toolbarScreenshareButton]="screenShareEnabled"
-	[toolbarRecordingButton]="recordingEnabled"
+	[toolbarRecordingButton]="recordingEnabled()"
 	[toolbarFullscreenButton]="false"
 	[toolbarBackgroundEffectsButton]="false"
 	[toolbarCaptionsButton]="false"
@@ -29,13 +29,11 @@
 	[toolbarDisplayLogo]="true"
 	[activitiesPanelRecordingActivity]="true"
 	[participantPanelItemMuteButton]="true"
-	[recordingActivityRecordingsList]="list"
-	[recordingActivityRecordingError]="error"
 	[streamDisplayParticipantName]="true"
 	[streamDisplayAudioDetection]="true"
 	[streamSettingsButton]="true"
 	[minimal]="false"
-	[participantName]="participantName"
+	[participantName]="participantName()"
 	[prejoin]="false"
 	[videoMuted]="true"
 	[audioMuted]="true"
