latest file added

--- a/VideoConferencing-Customer-Support-Supervisor/src/app/Support/call-support/call-support.component.html
+++ b/VideoConferencing-Customer-Support-Supervisor/src/app/Support/call-support/call-support.component.html
@@ -32,7 +32,7 @@
 	[activitiesPanelBroadcastingActivity]="false"
 >
 	<div *ovToolbarAdditionalButtons style="text-align: center">
-		<button mat-icon-button  (click)="connectToSupervisor()">
+		<button mat-icon-button *ngIf="isvisible"  (click)="connectToSupervisor()">
 			<mat-icon>supervisor_account</mat-icon>
 		</button>
 
