update send link according to json not by index

--- a/axisbankSupport/src/app/mycomp/login/login.component.css
+++ b/axisbankSupport/src/app/mycomp/login/login.component.css
@@ -65,8 +65,9 @@ table, th, td {
     border-collapse: collapse;
   }
 .callbtn
-{
-    width: 50%;
+{   min-width: auto;
+  width: auto;
+    /* width: 50%; */
     height: 80%;
     background-color:#97144d;
     border:none; 
