--- a/mCarbonCustomerSuppotPortal/src/app/mycomp/loginpage/loginpage.component.css
+++ b/mCarbonCustomerSuppotPortal/src/app/mycomp/loginpage/loginpage.component.css
@@ -63,6 +63,7 @@
   
   .container {
     max-width: 500px;
+    
     margin: 8% auto;
     padding: 20px;
     background-color: #FC6A03;
@@ -85,6 +86,7 @@
     font-size: 16px;
     margin-bottom: 5px;
     color: #ffffff;
+    letter-spacing: 1px;
   }
   
   
