--- a/mcarbonPortal/src/app/update-user-dialog/update-user-dialog.component.html
+++ b/mcarbonPortal/src/app/update-user-dialog/update-user-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="card card-1">
     <div class="card-header card-header-danger">
-      <h4 class="card-title">Create User</h4>
+      <h4 class="card-title">Edit User Details</h4>
       <button mat-icon-button mat-dialog-close class="close-btn">
         <mat-icon aria-label="Close dialog">close</mat-icon>
       </button>
