--- a/mcarbonPortal/src/app/user-management/user-management.component.html
+++ b/mcarbonPortal/src/app/user-management/user-management.component.html
@@ -151,7 +151,7 @@
                       <button
                         class="btn-action"
                         mat-menu-item
-                        (click)="updateDialog(user.userCode)"
+                        (click)="updateUserDialog(user)"
                         *ngIf="showEdit"
                       >
                         <mat-icon style="color: #009688">edit</mat-icon>
