--- a/mcarbonPortal/src/app/account-management/account-management.component.html
+++ b/mcarbonPortal/src/app/account-management/account-management.component.html
@@ -125,7 +125,7 @@
                       [matMenuTriggerFor]="menu"
                       aria-label="Example icon-button with a menu"
                     >
-                      <mat-icon>more_horiz</mat-icon>
+                      <mat-icon>more_vert</mat-icon>
                     </button>
                     <mat-menu #menu="matMenu" xPosition="after">
                       <button
