--- a/mcarbonPortal/src/app/user-profile/user-profile.component.scss
+++ b/mcarbonPortal/src/app/user-profile/user-profile.component.scss
@@ -22,3 +22,16 @@
 .card-1 {
   min-height: 345px !important;
 }
+
+.card-title-1 {
+  font-weight: bold;
+  margin-bottom: 20px !important;
+}
+
+.card-profile {
+  text-align: left;
+}
+
+.card-profile-1 {
+  text-align: center;
+}
