--- a/mcarbonPortal/src/app/user-profile/user-profile.component.html
+++ b/mcarbonPortal/src/app/user-profile/user-profile.component.html
@@ -69,19 +69,15 @@
                 </div>
                 <div class="col-md-5">{{ user.expDate }}</div>
               </div>
-              <div class="row">
+              <div class="row" style="padding-top: 15px">
                 <div
                   class="col-md-5 offset-md-1"
-                  style="font-weight: bold; font-size: 1rem"
+                  style="font-weight: bold; font-size: 1rem;"
                 >
                   Status:
                 </div>
-                <div class="col-md-5" *ngIf="active">
-                  <button style="color: green">Active</button>
-                </div>
-                <div class="col-md-5" *ngIf="deactive">
-                  <button style="color: red">Deactive</button>
-                </div>
+                <div class="col-md-5" *ngIf="active">Active</div>
+                <div class="col-md-5" *ngIf="deactive">Not Active</div>
               </div>
             </div>
           </div>
@@ -98,10 +94,14 @@
                 <h4 class="card-title card-title-1">Access List</h4>
               </div>
             </div>
-            <div *ngFor="let access of accessList">
-              <div class="row">
-                <h6 class="col-md-10 offset-md-1">{{ access.name }}</h6>
+            <div class="row">
+              <div
+                *ngFor="let access of accessList"
+                class="col-md-5 offset-md-1 list"
+              >
+                {{ access.name }}
               </div>
+
               <!-- <h6 class="card-category">{{ access.name }}</h6>
               <div class="card-description"></div> -->
             </div>
