--- a/mcarbonPortal/src/app/update-account-dialog/update-account-dialog.component.html
+++ b/mcarbonPortal/src/app/update-account-dialog/update-account-dialog.component.html
@@ -182,7 +182,7 @@
                     showMetaList(feature, $event.checked);
                     updateSelectedFeaturesMeta(
                       feature.featureId,
-                      feature.meta_list
+                      feature.metaList
                     )
                   "
                 >
@@ -217,7 +217,7 @@
       </div>
     </mat-tab>
 
-    <mat-tab label="User Information">
+    <!-- <mat-tab label="User Information">
       <div class="container">
         <div class="row">
           <div class="col-md-5 offset-md-1">
@@ -314,7 +314,7 @@
           </div>
         </div>
       </div>
-    </mat-tab>
+    </mat-tab> -->
   </mat-tab-group>
 
   <div mat-dialog-actions align="end" class="actions">
