changed dashboard icons & user management access and feature now showing

--- a/mcarbonPortal/src/app/dashboard/dashboard.component.html
+++ b/mcarbonPortal/src/app/dashboard/dashboard.component.html
@@ -57,7 +57,7 @@
         <div class="card card-stats">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
-              <i class="fa fa-twitter"></i>
+              <i class="fa fa-user"></i>
             </div>
             <p class="card-category">Participants</p>
             <h3 class="card-title">500+</h3>
