changed the size of access and feature dialog

--- a/mcarbonPortal/src/app/view-access-dialog/view-access-dialog.component.scss
+++ b/mcarbonPortal/src/app/view-access-dialog/view-access-dialog.component.scss
@@ -7,8 +7,8 @@
 }
 
 .row {
-  margin-left: auto;
-  margin-right: auto;
+  margin-right: -15px;
+  margin-left: -15px;
 }
 
 ::ng-deep .mat-checkbox-checked .mat-checkbox-background,
